--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,10 @@
 
 main {
   width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 15vh;
-  height: calc(100vh - 56px);
-  /* router view - navbar height */
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* align-items: center; */
+  padding-top: 5vh;
   overflow: scroll;
   color: white;
 }
@@ -14,7 +12,6 @@ main {
 
 .App-header {
   background-color: #282c34;
-
   font-size: calc(10px + 2vmin);
   color: white;
 }
