--- a/src/auth/Signup.css
+++ b/src/auth/Signup.css
@@ -1,4 +1,18 @@
-#signup-form>div {
+.signup-form {
   width: 100%;
-  margin: 20px 0 20px 0;
+  /* margin: 20px 0 20px 0; */
+}
+
+.signup-form-input {
+  width: 100%;
+  margin-top: .8em;
+  margin-bottom: .8em;
+  padding: 1.2em;
+}
+
+.signup-form-submit {
+  margin-top: 1.2em;
+  padding: 1.2em;
+  width: 13em;
+  float: right;
 }
