--- a/src/auth/Login.css
+++ b/src/auth/Login.css
@@ -1,5 +1,18 @@
-#login-form>div {
+.login-form {
   width: 100%;
-  margin: 20px 0 20px 0;
+  /* margin: 20px 0 20px 0; */
 }
 
+.login-form-input {
+  width: 100%;
+  margin-top: .8em;
+  margin-bottom: .8em;
+  padding: 1.2em;
+}
+
+.login-form-submit {
+  margin-top: 1.2em;
+  padding: 1.2em;
+  width: 13em;
+  float: right;
+}
